--- a/AnnualReportPortalSIH/Frontend/index.html
+++ b/AnnualReportPortalSIH/Frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACADEMY OF TECHNOLOGY - SITE MADE BY SONU CHOWDHURY</title>
+    <title>ACADEMY OF TECHNOLOGY - SITE MADE BY UNNATI WAGH</title>
     <link rel="icon" href='aot-logo.png' type="image/x-icon">
   </head>
   <body>
