--- a/AnnualReportPortalSIH/Backend/public/index.html
+++ b/AnnualReportPortalSIH/Backend/public/index.html
@@ -131,19 +131,19 @@
         <iframe src="https://giphy.com/embed/XR9Dp54ZC4dji" frameBorder="0" allowFullScreen></iframe>
         <h3>Welcome to the Server of</h3>
         <h1>ADVANCED INSTITUTE MANAGEMENT PORTAL</h1>
-        <p>Developed by <strong>Sonu Chowdhury</strong></p>
+        <p>Developed by <strong>Unnati Wagh</strong></p>
         <div class="links">
             <a href="https://aoteduproject.vercel.app/" target="_blank">Live Link</a>
-            <a href="https://github.com/SonuuChowdhury/ADVANCED-INSTITUTE-MANAGEMENT-PORTAL" target="_blank">
+            <a href="https://github.com/UnnatiWagh/AnnualReportPortal/tree/main/AnnualReportPortalSIH" target="_blank">
                 GitHub Repository
             </a>
         </div>
-        <a href="https://github.com/SonuuChowdhury/ADVANCED-INSTITUTE-MANAGEMENT-PORTAL" target="_blank">
+        <a href="https://github.com/UnnatiWagh/AnnualReportPortal/tree/main/AnnualReportPortalSIH" target="_blank">
             <div class="github-icon"></div>
         </a>
         <br>
         <button class="button-portfolio" onclick="window.location.href='https://portfolio-sonuuchowdhury.vercel.app/'">
-            Visit Sonu's Portfolio
+            Visit Unnati's Portfolio
         </button>
     </div>
 </body>
